# rtiow

./: .gitignore  CMakeLists.txt  devenv.nix  main.cpp
include/: camera.hpp  color.hpp  common.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  ray.hpp  sphere.hpp  vec3.hpp
src/: camera.cpp  color.cpp  hittable_list.cpp  interval.cpp  sphere.cpp  vec3.cpp
